[package]
name = "matrix-neo-neo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_derive = "1.0.132"
serde = { version = "1.0", features = ["derive"] }
tinytemplate = "1.2.1"
regex = "1.5.4"
url = "2.2.2"
matrix-sdk = { version = "0.4.1", features = ["encryption"] }
tracing-subscriber = "0.2.25"
tokio = { version = "1.12.0", features = ["full"] }
