[package]
name = "matrix-neo-neo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_derive = "1.0.136"
serde = { version = "1.0.136", features = ["derive"] }
tinytemplate = "1.2.1"
regex = "1.5.5"
url = "2.2.2"
matrix-sdk = { path = "./matrix-rust-sdk/crates/matrix-sdk", features = ["encryption"] }
tracing-subscriber = "0.3.11"
tokio = { version = "1.17.0", features = ["full"] }
